8336778: [lworld] C2 compilation hits "invalid node class" assert when merging object field values